--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 # Root logger option
 log4j.rootLogger=ERROR, stdout
 log4j.category.com.caseyscarborough.spring.redis=DEBUG, stdout
+log4j.additivity.com.caseyscarborough.spring.redis = false
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
